@@ -1,3 +1,13 @@
+2014-01-16  Richard Frith-Macdonald <rfm@gnu.org>
+
+        * EcProcess.m:
+        * EcAlarmDestination.h:
+        * EcAlarmDestination.m:
+	Remove experimental force clear method ... obey the KISS rule and
+	stick to using domanange and unmanage methods for clearing on
+	startup/shutdown. People wanting alars which persist after process
+	shutdown should create a secondary managed object for them.
+
 2013-11-04  Richard Frith-Macdonald <rfm@gnu.org>
 
         * EcProcess.m:
